--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
         env_file:
             - .env
         volumes:
-            - ./app/:/var/www/symfony/
+            - ./app/:/var/www/app/
         networks:
             - net
     nginx:
@@ -31,7 +31,7 @@ services:
             context: .
             dockerfile: docker/nginx/Dockerfile
         volumes:
-            - ./app/:/var/www/symfony/
+            - ./app/:/var/www/app/
         ports:
             - 8001:80
         networks:
